--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
   color: #fff;
   font-family: 'JetBrains Mono', monospace;
   width: 100%;
-  height: auto;
+  height: 100%;
+  overflow: auto;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
@@ -47,7 +48,7 @@ main {
   padding: 1rem;
   max-width: 1000px;
   margin: auto;
-  height: calc(100vh); 
+  height: 100vh; 
   
 
 }
